# moon_knight_kbd

./: .gitignore  Custom_MCU.bak  README.md  dj_keeb_library.bak  moon_knight_v2_case_design.stl  moon_knight_v2_switch_plates.stl
cosmotyl-6x4/: cosmotyl-6x4-caseleft.stl  cosmotyl-6x4-caseright.stl  cosmotyl-6x4-casetest.stl  cosmotyl-6x4-holderleft.stl  cosmotyl-6x4-holderright.stl  cosmotyl-6x4-plateleft.stl  cosmotyl-6x4-plateright.stl  cosmotyl-6x4-wristrestleft.stl  cosmotyl-6x4-wristrestright.stl  info.md
dactyl cosmos/: cosmotyl-caseleft.stl  cosmotyl-caseright.stl  cosmotyl-casetest.stl  cosmotyl-holderleft.stl  cosmotyl-holderright.stl  cosmotyl-plateleft.stl  cosmotyl-plateright.stl  cosmotyl-wristrestleft.stl  cosmotyl-wristrestright.stl  screws.md
firmwares/: README.md
keeb_utils/layer-display/: SETUP.md  launch-layer-display.sh  main.py  pyproject.toml
keeb_utils/layer-display/src/layer_display/: __init__.py  keyboard_hid.py  main.py  vial_parser.py
moon_knight_v1/: fabrication-toolkit-options.json  fp-info-cache  moon_knight_v1.kicad_pcb  moon_knight_v1.kicad_prl  moon_knight_v1.kicad_pro  moon_knight_v1.kicad_sch  moon_knight_v1_left.kicad_pcb  moon_knight_v1_left.kicad_pro  moon_knight_v1_right.kicad_pcb  moon_knight_v1_right.kicad_prl  moon_knight_v1_right.kicad_pro  sym-lib-table  type_c_breakout.bak  usb_c.kicad_prl  usb_c.kicad_pro
moon_knight_v1_right/: fabrication-toolkit-options.json  fp-info-cache  moon_knight_v1_right.kicad_pcb  moon_knight_v1_right.kicad_prl  moon_knight_v1_right.kicad_sch  moon_knight_v1_right.step  (+2 more)
(+111 files in other folders)
